Change linear gradient colours

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ h1{
 }
 
 body {
-    background: linear-gradient(180deg, #FFEEEE, #DDEFBB);
+    background:  linear-gradient(#b2f397, #c5f3af);
     height: auto;
     
     max-width: max-content;
